# tsi-project

./: .gitignore  LICENSE  README.md  Roberta_general.ipynb  Roberta_model.ipynb  Roberta_model_post_or_neg.ipynb  Untitled.ipynb  __set_up.ipynb  main.ipynb  main.py  models.py  pyproject.toml  set_up.ipynb
api/: get_tweet.ipynb
data_set/: data_acess.ipynb  get_data_set.ipynb  to_download_dataset.ipynb
data_set/emoji/: tweet_eval-test.parquet  tweet_eval-train.parquet  tweet_eval-validation.parquet
data_set/emotion/: tweet_eval-test.parquet  tweet_eval-train.parquet  tweet_eval-validation.parquet
data_set/hate/: tweet_eval-test.parquet  tweet_eval-train.parquet  tweet_eval-validation.parquet
data_set/irony/: tweet_eval-test.parquet  tweet_eval-train.parquet  tweet_eval-validation.parquet
data_set/offensive/: tweet_eval-test.parquet  tweet_eval-train.parquet  tweet_eval-validation.parquet
data_set/sentiment/: tweet_eval-test.parquet  tweet_eval-train.parquet  tweet_eval-validation.parquet
