[tool.poetry]
name = "tsi-project"
version = "0.1.0"
description = "A study project about ML/DL applied on social network (TSI/ISEP)"
authors = ["Maxime POPOT--CHAPUIS <maxime.popot@gmail.com>"]
readme = "README.md"
packages = [{include = "tsi_project"}]

[tool.poetry.dependencies]
python = "~3.10"
matplotlib = "^3.7.1"
jupyterlab = "^3.6.3"
transformers = "^4.27.4"
scipy = "^1.10.1"
torch = "^2.0.0"
ipywidgets = "^8.0.6"
snscrape = "^0.6.2.20230320"
pandas = "^2.0.0"
datasets = "^2.11.0"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
